<resources>
    <string name="app_name">My Adventure Game</string>
    <string name="entrance_room">Entrance Room</string>
    <string name="inventory">Inventory</string>
    <string name="go_north">Go North</string>
    <string name="go_east">Go East</string>
    <string name="go_west">Go West</string>
    <string name="go_south">Go South</string>
    <string name="map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bedroom">Bedroom</string>
    <string name="search_room">Search Room</string>
    <string name="why_not">Why not</string>
    <string name="i_don_t_know_what_s_back_there">I don\'t know what\'s back there!</string>
    <string name="hidden_closet">Hidden Closet</string>
    <string name="bad_idea">Bad Idea!</string>
    <string name="close_inventory">Close Inventory</string>
    <string name="second_floor_key_not_obtained">Second Floor Key: Not Obtained</string>
    <string name="crowbar_not_obtained">Crowbar: Not Obtained</string>
    <string name="not_obtained">Not Obtained</string>
    <string name="crowbar">Crowbar:</string>
    <string name="second_floor_key">Second Floor Key:</string>
    <string name="north_stairwell">North Stairwell</string>
    <string name="balcony">Balcony</string>
</resources>